--- a/example.bib
+++ b/example.bib
@@ -237,7 +237,7 @@
     url = {https://www.tandfonline.com/doi/abs/10.1080/002689797170220}
 }
 @ARTICLE{Baer2011,
-    author = {Marcel D. Baer and Christopher J. Mundy and  Matthew J. McGrath and I.-F. Will Kuo and J. Ilja Siepmann and Douglas J. Tobias},
+    author = {Marcel D. Baer and Christopher J. Mundy and Matthew J. McGrath and I.-F. Will Kuo and J. Ilja Siepmann and Douglas J. Tobias},
     title = {{Re-examining the properties of the aqueous vapor-liquid interface using dispersion corrected density functional theory}},
     journal = {J. Chem. Phys.},
     year = {2011},
@@ -1211,7 +1211,6 @@ URL = {https://doi.org/10.1063/1.464521},
   url = {https://link.aps.org/doi/10.1103/RevModPhys.64.1045}
 }
 @ARTICLE{RC02,
-    abstract = {{Density‐Functional‐Theory (DFT) provides a general framework to deal with the ground‐state energy of the electrons in many‐atom systems. Its history dates back to the work of Thomas [1], Fermi [2] and Dirac [3] who devised approximate expressions for the kinetic energy [1, 2] and the exchange energy [3] of many‐electron systems in terms of simple functionals of the local electron density. These ideas were further elaborated in the Xα method of Slater [4], until finally, the foundations of the modern theory were laid down in the mid‐sixties by Kohn and collaborators [5, 6]. Since then but particularly in the last two decades the number of applications of DFT to electronic structure problems has grown dramatically. Today DFT is the method of choice for first‐principles electronic structure calculations in condensed phase and complex molecular environments. DFT based approaches are used in a variety of disciplines ranging from condensed matter physics, to chemistry, materials science, biochemistry and biophysics. There are several reason for this success: (i) DFT makes the many‐body electronic problem tractable at a numerical cost of self‐consistent‐field single particle calculations; (ii) despite the severe approximations made to the exchange and correlation energy functional, DFT calculations are usually sufficiently accurate to predict materials structures or chemical reactions products; (iii) currently available computational power and modern numerical algorithms make DFT calculations feasible for realistic models of systems like e.g. an interface between two crystalline materials, a carbon nanotube, or the active site of an enzyme.}},
     author ={R. Car},
     title = {{Introduction to density-functional theory and ab-initio molecular dynamics}},
     journal = {Quant. Struct. Act. Rel.},
@@ -5187,15 +5186,7 @@ pages = "7976--7980",
 year = "2005",
 doi = "",
 url = " ",
-author = "P. B. Petersen and R. J. Saykally",
-abstract = "The recent demonstration of enhanced surface anion concentrations for aqueous electrolyte solutions strongly
-        contrasts current textbook descriptions. Small cations are still expected to be repelled from the surface, but
-        recent simulations predict that hydronium (H3O+) cations are instead preferentially adsorbed at the interface.
-        Here we describe a comparative second harmonic generation (SHG) study of aqueous solutions of hydriodic
-        acid (HI) and alkali iodides (NaI and KI), which establish lower limits of 55% and 34% larger surface iodide
-        concentrations for HI solutions relative to NaI and KI solutions, respectively. This result implies that hydronium
-        ions  must  exist  in  much  higher  densities  near  the  liquid  surface  than  do  the  alkali  ions,  in  support  of  the
-        theoretical predictions",
+author = "P. B. Petersen and R. J. Saykally"
 }
 @ARTICLE{Knipping00,
 title = "Experiments and simulations of ion-enhanced interfacial chemistry on aqueous NaCl aerosols",
@@ -8254,7 +8245,7 @@ URL = {
 }
 @ARTICLE{LeeCM2013,
 author = {Christopher M. Lee and Naseer M. A. Mohamed and Heath D. Watts and James D. Kubicki and Seong H. Kim},
-title = {{Sum-Frequency-Generation Vibration Spectroscopy and Density Functional Theory Calculations with Dispersion Corrections (DFT-D2) for Cellulose Iα and Iβ}},
+title = {{Sum-Frequency-Generation Vibration Spectroscopy and Density Functional Theory Calculations with Dispersion Corrections (DFT-D2) for Cellulose I$\alpha$ and I$\beta$}},
 journal = {J. Phys. Chem. B},
 year = {2013},
 volume = {117},
