--- a/main.tex
+++ b/main.tex
@@ -258,7 +258,7 @@ Wässrige Nitratlösungen von \abinitio Molecular Dynamics} % Your thesis title,
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-\href{https://orcid.org/my-orcid?orcid=0000-0001-8515-8584}{\authorname} % Author name - remove the \href bracket to remove the link
+\href{https://hg08.github.io}{\authorname} % Author name - remove the \href bracket to remove the link
 \end{flushleft}
 \end{minipage}
 \begin{minipage}[t]{0.5\textwidth}
