--- a/main.tex
+++ b/main.tex
@@ -340,19 +340,19 @@ Wässrige Nitratlösungen von \abinitio Molecular Dynamics} % Your thesis title,
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-The interfacial structure and dynamics of solutions containing alkaline nitrates and alkaline halides have been studied by density functional theory-based 
+The interfacial structure and dynamics of solutions containing alkali nitrates and alkali halides have been studied by density functional theory-based 
 molecular dynamics (DFTMD) simulations. We have presented a detailed analysis of the hydrogen bond (HB) structure at the interface and 
 have calculated the interface vibrational sum-frequency generation (VSFG) spectra to provide a molecular interpretation of available experimental data.
 
 %
-Both the measured and calculated VSFG spectra of alkaline nitrate solution show a reduced intensity in the lower frequency portion of the stretching band,
+Both the measured and calculated VSFG spectra of alkali nitrate solution show a reduced intensity in the lower frequency portion of the stretching band,
 when compared to the water/vapor interface.
-This reduction is attributed to the hydrogen (H-) bonds established between the nitrate and the surrounding water molecules at the interface.
-This spectral feature is only related to the presence of the nitrate at the water surface and is not influenced by the alkali metal ions.
+This reduction is attributed to the hydrogen (H-) bonds established between nitrate and the surrounding water molecules at the interface.
+This spectral feature is only related to the presence of nitrate at the water surface and is not influenced by the alkali metal ions.
 We have also shown that, to provide a microscopic interpretation of the spectra,
 realistic models of the interface are required beyond the simple cluster models.
 
-Heavier halide anions, such as iodine, have an effect similar to that of nitrate ions on the structure and dynamics of the water/vapor interface.
+Heavier halide anions, such as iodine, have an effect similar to that of nitrate on the structure and dynamics of the water/vapor interface.
 From the results of the simulations and from the calculation of the nonlinear susceptibilities, 
 we conclude that water molecules at the interfaces of LiI, NaI, and KI solutions are participating
 in weaker H-bonds, compared with those at the water/vapor interface.
@@ -366,7 +366,7 @@ and proposed a statistical scheme based on the interfacial HB (IHB) population f
 Combining the IHB method with interfacial molecule sampling (IMS), we have obtained a method to determine the thickness of the water/vapor interface.
 The IHB method has been also extended to the solvation shells of ions in aqueous solutions.
 
-%Finally, the number $n$ of H-bonds per OH group at instantaneous interface promotes our understanding of structural features of the alkaline nitrate
+%Finally, the number $n$ of H-bonds per OH group at instantaneous interface promotes our understanding of structural features of the alkali nitrate
 %	solution/vapor interface. 
 %	By comparing the distribution $P(n)$ of $n$ between the \LiN solution/vapor interface and the water/vapor interface, 
 %	we obtained that: For the solution interface, there is less free OH groups, and more OH groups that can form two H-bonds. 
@@ -382,21 +382,19 @@ The IHB method has been also extended to the solvation shells of ions in aqueous
 {\selectlanguage{ngerman}
 \begin{extraAbstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-Die Grenzflächenstruktur und -dynamik von Lösungen, die Alkalinitrate und Alkalihalogenide enthalten, 
-wurden mit Hilfe von auf Dichtefunktionaltheorie basierenden
-Molekulardynamik-Simulationen (DFTMD) untersucht. Wir haben eine detaillierte Analyse der Wasserstoffbrückenbindungsstruktur (HB) 
-an der Grenzfläche vorgelegt und haben die Spektren der Schwingungssummen-Frequenz-Generierung (VSFG) an der Grenzfläche berechnet, 
-um eine molekulare Interpretation der verfügbaren experimentellen Daten zu ermöglichen.
+Die Grenzflächenstruktur und -dynamik von Lösungen, die Alkalinitrate und Alkalihalogenide enthalten, wurden mit Hilfe von auf Dichtefunktionaltheorie basierenden
+Molekulardynamik-Simulationen (DFTMD) untersucht. Wir haben eine detaillierte Analyse der Wasserstoffbrückenbindungsstruktur (HB) an der Grenzfläche vorgelegt und
+haben die Spektren der Schwingungssummen-Frequenz-Generierung (VSFG) an der Grenzfläche berechnet, um eine molekulare Interpretation der verfügbaren experimentellen Daten zu ermöglichen.
 
 %
-Sowohl die gemessenen als auch die berechneten VSFG-Spektren der Alkalinitratlösung zeigen eine verringerte Intensität im unteren Frequenzbereich 
-der Streckbande, im Vergleich zur Wasser/Dampf-Grenzfläche.
-Diese Verringerung wird auf die Wasserstoffbrückenbindungen (H-) zurückgeführt, die zwischen dem Nitrat und den umgebenden Wassermolekülen an der Grenzfläche entstehen.
-Dieses spektrale Merkmal hängt nur mit dem Vorhandensein des Nitrats an der Wasseroberfläche zusammen und wird nicht von den Alkalimetallionen beeinflusst.
+Sowohl die gemessenen als auch die berechneten VSFG-Spektren der Alkalinitratlösung zeigen eine verringerte Intensität im unteren Frequenzbereich der Streckbande,
+im Vergleich zur Wasser/Dampf-Grenzfläche.
+Diese Verringerung wird auf die Wasserstoffbrückenbindungen (H-) zurückgeführt, die zwischen Nitrat und den umgebenden Wassermolekülen an der Grenzfläche entstehen.
+Dieses spektrale Merkmal hängt nur mit dem Vorhandensein von Nitrat an der Wasseroberfläche zusammen und wird nicht von den Alkalimetallionen beeinflusst.
 Wir haben auch gezeigt, dass für eine mikroskopische Interpretation der Spektren
 realistische Modelle der Grenzfläche erforderlich sind, die über die einfachen Clustermodelle hinausgehen.
 
-Schwerere Halogenidanionen, wie z. B. Jod, haben eine ähnliche Wirkung auf die Struktur und Dynamik der Wasser-Dampf-Grenzfläche wie Nitrationen.
+Schwerere Halogenidanionen, wie z. B. Jod, haben eine ähnliche Wirkung wie Nitrat auf die Struktur und Dynamik der Wasser-Dampf-Grenzfläche.
 Aus den Ergebnissen der Simulationen und der Berechnung der nichtlinearen Suszeptibilitäten,
 schließen wir, dass die Wassermoleküle an den Grenzflächen von LiI-, NaI- und KI-Lösungen
 an schwächeren H-Bindungen beteiligt sind als an der Wasser/Dampf-Grenzfläche.
