--- a/main.tex
+++ b/main.tex
@@ -592,7 +592,7 @@ $V_{\text{H}}$ & Hartree potential of electrons & \\
 $h(t)$ & HB population operator & \\
 $h^{(d)}(t)$ & HB population operator (it is 1 if the tagged pair are closer than $r_{\text{OO}}^{\text{c}}$)& \\
 $H(t)$ & HB population operator (continuously)& \\
-$C_{\text{HB}}(t)$ (or $c(t)$) & HB population auto-correlation function & \\
+$c(t)$ & HB population auto-correlation function & \\
 $\omega_{\text{I}}$ & highest nuclear phonon frequency & \\
 $\theta$ & H-O-H angle in a water molecule, or polar angle of a molecule&  \\
 $\beta$ & hyperpolarizability, or reciprocal temperature & \\
@@ -638,7 +638,7 @@ $\nu_i$ & stoichiometry of ion $i$ & \\
 $\Gamma_i$ & surface excess of component $i$ & \\
 $K_{\text{p,X}}$ & surface/bulk molar concentration ratio of ion X &  \\
 $\gamma$ & surface tension & \\
-$S_{\text{HB}}(t)$ (or $s(t)$)& survival probability of HB & \\
+$s(t)$ & survival probability of HB & \\
 $t_\text{t}$ & temporal resolutions for calculating HB dynamics & \\
 %$a_i$ & thermodynamic activity of a chemical species $i$ & \\
 $d$ & thickness of layer of interface (model) & \\
