--- a/main.tex
+++ b/main.tex
@@ -342,29 +342,28 @@ Wässrige Nitratlösungen von \abinitio Molecular Dynamics} % Your thesis title,
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 The interfacial structure and dynamics of solutions containing alkali nitrates and alkali halides have been studied by density functional theory-based 
 molecular dynamics (DFTMD) simulations. We have presented a detailed analysis of the hydrogen bond (HB) structure at the interface and 
-have calculated the interface vibrational sum-frequency generation (VSFG) spectra to provide a molecular interpretation of available experimental data.
+calculated the interface vibrational sum-frequency generation (VSFG) spectra to provide a molecular interpretation of the available experimental data.
 
-%
-Both the measured and calculated VSFG spectra of alkali nitrate solution show a reduced intensity in the lower frequency portion of the stretching band,
-when compared to the water/vapor interface.
+Both the measured and the calculated VSFG spectra of the alkali nitrate solution show a reduced intensity 
+in the lower frequency portion of the stretching band, compared with the water/vapor interface.
 This reduction is attributed to the hydrogen (H-) bonds established between nitrate and the surrounding water molecules at the interface.
 This spectral feature is only related to the presence of nitrate at the water surface and is not influenced by the alkali metal ions.
 We have also shown that, to provide a microscopic interpretation of the spectra,
-realistic models of the interface are required beyond the simple cluster models.
+realistic models of the interface are required beyond simple cluster models.
 
-Heavier halide anions, such as iodine, have an effect similar to that of nitrate on the structure and dynamics of the water/vapor interface.
-From the results of the simulations and from the calculation of the nonlinear susceptibilities, 
+Heavier halide anions such as iodine have an effect similar to that of nitrate on the structure and dynamics of the water/vapor interface.
+From the results of the simulations and the calculation of the nonlinear susceptibilities, 
 we conclude that water molecules at the interfaces of LiI, NaI, and KI solutions are participating
 in weaker H-bonds, compared with those at the water/vapor interface.
 This feature originates from the unique distribution of \I ions and alkali metal cations,
 which form a double layer over a thickness of about 5--10 \A.
 
-The second aspect which we have investigated is the HB dynamics.
+The second aspect we have investigated is the HB dynamics.
 To analyze HB dynamics at interfaces, 
 we determined the instantaneous interface based on spatial density, 
 and proposed a statistical scheme based on the interfacial HB (IHB) population for identifying the instantaneous interface.
-Combining the IHB method with interfacial molecule sampling (IMS), we have obtained a method to determine the thickness of the water/vapor interface.
-The IHB method has been also extended to the solvation shells of ions in aqueous solutions.
+Combining the IHB method with interfacial molecule sampling (IMS), we obtained a method to determine the thickness of the water/vapor interface.
+The IHB method has also been extended to the solvation shells of ions in aqueous solutions.
 
 %Finally, the number $n$ of H-bonds per OH group at instantaneous interface promotes our understanding of structural features of the alkali nitrate
 %	solution/vapor interface. 
@@ -382,31 +381,32 @@ The IHB method has been also extended to the solvation shells of ions in aqueous
 {\selectlanguage{ngerman}
 \begin{extraAbstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-Die Grenzflächenstruktur und -dynamik von Lösungen, die Alkalinitrate und Alkalihalogenide enthalten, wurden mit Hilfe von auf Dichtefunktionaltheorie basierenden
-Molekulardynamik-Simulationen (DFTMD) untersucht. Wir haben eine detaillierte Analyse der Wasserstoffbrückenbindungsstruktur (HB) an der Grenzfläche vorgelegt und
-haben die Spektren der Schwingungssummen-Frequenz-Generierung (VSFG) an der Grenzfläche berechnet, um eine molekulare Interpretation der verfügbaren experimentellen Daten zu ermöglichen.
+Die Grenzflächenstruktur und -dynamik von Lösungen, die Alkalinitrate und Alkalihalogenide enthalten, 
+wurden mit Hilfe von auf Dichtefunktionaltheorie basierenden Molekulardynamik-Simulationen (DFTMD) untersucht.
+Wir haben eine detaillierte Analyse der Wasserstoffbrückenbindungsstruktur (HB) an der Grenzfläche durchgeführt und
+berechneten die Spektren der Schwingungssummen-Frequenz-Generierung (VSFG) an der Grenzfläche, um eine molekulare Interpretation der verfügbaren experimentellen Daten zu ermöglichen.
 
-%
-Sowohl die gemessenen als auch die berechneten VSFG-Spektren der Alkalinitratlösung zeigen eine verringerte Intensität im unteren Frequenzbereich der Streckbande,
-im Vergleich zur Wasser/Dampf-Grenzfläche.
-Diese Verringerung wird auf die Wasserstoffbrückenbindungen (H-) zurückgeführt, die zwischen Nitrat und den umgebenden Wassermolekülen an der Grenzfläche entstehen.
+Sowohl die gemessenen als auch die berechneten VSFG-Spektren der Alkalinitratlösung zeigen eine verminderte Intensität
+im unteren Frequenzbereich der Streckbande im Vergleich zur Wasser-Dampf-Grenzfläche.
+Diese Verringerung wird auf die Wasserstoffbrückenbindungen zurückgeführt, die zwischen Nitrat und den umgebenden Wassermolekülen an der Grenzfläche entstehen.
 Dieses spektrale Merkmal hängt nur mit dem Vorhandensein von Nitrat an der Wasseroberfläche zusammen und wird nicht von den Alkalimetallionen beeinflusst.
 Wir haben auch gezeigt, dass für eine mikroskopische Interpretation der Spektren
-realistische Modelle der Grenzfläche erforderlich sind, die über die einfachen Clustermodelle hinausgehen.
+realistische Modelle der Grenzfläche erforderlich sind, die über einfache Clustermodelle hinausgehen.
 
-Schwerere Halogenidanionen, wie z. B. Jod, haben eine ähnliche Wirkung wie Nitrat auf die Struktur und Dynamik der Wasser-Dampf-Grenzfläche.
+Schwerere Halogenidanionen wie Jod haben einen ähnlichen Effekt wie Nitrat auf die Struktur und Dynamik der Wasser-Dampf-Grenzfläche.
 Aus den Ergebnissen der Simulationen und der Berechnung der nichtlinearen Suszeptibilitäten,
 schließen wir, dass die Wassermoleküle an den Grenzflächen von LiI-, NaI- und KI-Lösungen
 an schwächeren H-Bindungen beteiligt sind als an der Wasser/Dampf-Grenzfläche.
-Dieses Merkmal ist auf die einzigartige Verteilung von I-Ionen und Alkalimetallkationen zurückzuführen,
-die eine Doppelschicht mit einer Dicke von etwa 5-10 Angström bilden.
+Dieses Merkmal ist auf die einzigartige Verteilung von \I-Ionen und Alkalimetallkationen zurückzuführen,
+die eine Doppelschicht über eine Dicke von etwa 5-10 \A\  bilden.
 
 Der zweite Aspekt, den wir untersucht haben, ist die HB-Dynamik.
 Um die HB-Dynamik an Grenzflächen zu analysieren,
 haben wir die momentane Grenzfläche anhand der räumlichen Dichte bestimmt,
 und schlugen ein statistisches Schema vor, das auf der HB-Population an den Grenzflächen (IHB) basiert, um die momentane Grenzfläche zu identifizieren.
-Durch die Kombination der IHB-Methode mit dem Interfacial Molecule Sampling (IMS) haben wir eine Methode zur Bestimmung der Dicke der Wasser/Dampf-Grenzfläche entwickelt.
+Durch die Kombination der IHB-Methode mit dem Interfacial Molecule Sampling (IMS) erhielten wir eine Methode zur Bestimmung der Dicke der Wasser/Dampf-Grenzfläche.
 Die IHB-Methode wurde auch auf die Solvatationsschalen von Ionen in wässrigen Lösungen ausgedehnt.
+
 \end{extraAbstract}
 }
 \selectlanguage{english}
