--- a/main.tex
+++ b/main.tex
@@ -492,6 +492,7 @@ I will always remember the kindness, open-mindedness, diligence and perseverance
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
+\textbf{2DSFG} & two-\textbf{D}imensional \textbf{S}um-\textbf{F}requency \textbf{G}eneration\\
 \textbf{AIMD} & \abinitio \textbf{M}olecular \textbf{D}ynamics\\
 \textbf{BLYP} & \textbf{B}eck-\textbf{L}ee-\textbf{Y}ang-\textbf{P}arr\\
 \textbf{BOMD} & \textbf{B}orn-\textbf{O}ppenheimer \textbf{M}olecular \textbf{D}ynamics\\
